src/objects/DefaultQueueSettings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>IsContractingQueue__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsContractingQueue</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsDataEntryQueue__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsDataEntryQueue</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsEscalateQueue__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsEscalateQueue</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PlanId__c</fullName>
        <label>PlanId</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QueueId__c</fullName>
        <label>QueueId</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QueueName__c</fullName>
        <label>QueueName</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>DefaultQueueSettings</label>
</CustomObject>